<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".UI.MainActivity">


    <ImageView
        android:id="@+id/iv_photo_main"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_marginTop="156dp"
        android:src="@drawable/photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_main"
        android:layout_width="310dp"
        android:layout_height="47dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/ed_box"
        android:paddingStart="25dp"
        android:hint="@string/name"
        android:fontFamily="@font/poppins"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_photo_main" />

    <EditText
        android:id="@+id/palindrome_main"
        android:layout_width="310dp"
        android:layout_height="47dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/ed_box"
        android:fontFamily="@font/poppins"
        android:hint="@string/palindrome"
        android:paddingStart="25dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_main" />

    <Button
        android:id="@+id/btn_check"
        android:layout_width="310dp"
        android:layout_height="47dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_box"
        android:fontFamily="@font/poppins"
        android:text="@string/check"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/palindrome_main" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="310dp"
        android:layout_height="47dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_box"
        android:fontFamily="@font/poppins"
        android:text="@string/next"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_check"
        app:layout_constraintVertical_bias="0.015" />


</androidx.constraintlayout.widget.ConstraintLayout>